public/style.css
/* Variables */
:root {
	--color-eclipse: #383838;
	--color-white-smoke: #eee;
	--color-gainsboro: #ddd;
	--color-heather: #bdc3c7;
	--color-submarine: #95a5a6;
	--color-oslo-grey: #7f8c8d;
	--color-mine-shaft: #343a3e;
	--color-cinnabar: #e74c3c;
	--color-persian-red: #c0392b;
	--color-shamrock: #2ecc71;
	--color-jungle-green: #27ae60;
	--color-summer-sky: #3498db;
	--color-pelorous: #2980b9;
}

* {
	box-sizing: inherit;
}

html {
	box-sizing: border-box;
	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
}

body {
	display: flex;
	margin: 0 auto;
	width: 100%;
}

.clearfix:after {
	content: "";
	display: table;
	clear: both;
}

button {
	border: none;
	border-radius: 3px;
	cursor: pointer;
	font-size: .8rem;
	padding: .5rem .8rem;
	text-transform: uppercase;
}
button:disabled {
	background-color: var(--color-heather);
}
button.red {
	background-color: var(--color-cinnabar);
	color: #fff;
}
button.red:hover {
	background-color: var(--color-persian-red);
}
button.green {
	background-color: var(--color-shamrock);
	color: #fff;
}
button.green:hover {
	background-color: var(--color-jungle-green);
}
button.blue {
	background-color: var(--color-summer-sky);
	color: #fff;
}
button.blue:hover,
button.blue.active {
	background-color: var(--color-pelorous);
}
button.grey {
	background-color: var(--color-oslo-grey);
	color: #fff;
}
button.grey:hover {
	background-color: var(--color-submarine);
}

.lists-toggle {
	background-color: transparent;
	color: var(--color-oslo-grey);
	padding: 0;
	position: absolute;
	left: 0;
	bottom: .8rem;
	width: 2rem;
	height: 2rem;
	transition: left .2s ease-in-out;
	z-index: 1;
}
@media (min-width: 45em) {
	.lists-toggle.collapse {
		/* left: calc(30% - 2.5rem); */
	}
}
@media (min-width: 75em) {
	.lists-toggle {
		/* left: .5rem; */
	}
	.lists-toggle.collapse {
		/* left: calc(20% - 2.5rem); */
	}
}
.lists-toggle .octicon {
	width: 2rem;
	height: 2rem;
}
.lists-toggle .hide-lists {
	display: none;
}
.lists-toggle.collapse .show-lists {
	display: none;
}
.lists-toggle.collapse .hide-lists {
	display: inline-block;
}

.add {
	border-radius: 50%;
	display: block;
	font-family: monospace;
	font-size: 1.3em;
	width: 2.5em;
	height: 2.5em;
	position: absolute;
	right: .5rem;
	bottom: .8rem;
}
.add:focus {
	outline: none;
}
.add svg {
	width: 1rem;
	height: 1.5rem;
}
.profile {
	cursor: pointer;
	text-align: center;
	width: 2.5rem;
	height: 2.5rem;
	position: absolute;
	top: .5rem;
	right: .5rem;
}
.profile .image {
	background-color: var(--color-submarine);
	border-radius: 50%;
	color: var(--color-white-smoke);
	display: inline-block;
	font-size: 1.3em;
	width: 100%;
	height: auto;
}
.profile span.image {
	padding-top: .5em;
}
.profile .options {
	background-color: white;
	box-shadow: 0 3px 12px rgba(0, 0, 0, .15);
	border: 1px solid rgba(0, 0, 0, .15);
	display: none;
	font-size: .8em;
	list-style: none;
	padding: 0;
	position: absolute;
	bottom: -8.5rem;
	right: -0.1rem;
	z-index: 1;
}
.profile .options::before {
	content: '';
	position: absolute;
	border: 6px solid transparent;
	border-bottom-color: rgba(0, 0, 0, .15);
	right: 16px;
	top: -13px;
}
.profile .options::after {
	content: '';
	position: absolute;
	border: 5px solid transparent;
	border-bottom-color: var(--color-white-smoke);
	right: 17px;
	top: -10px;
}
.profile.active .options {
	display: block;
}
.profile .options li {
	border-bottom: 1px solid var(--color-white-smoke);
}
.profile .options .name {
	background-color: var(--color-white-smoke);
	padding: .5rem 0;
}
.profile .options a {
	color: black;
	display: block;
	padding: .8rem;
	text-decoration: none;
}
.profile .options a:hover {
	background-color: var(--color-white-smoke);
}

.lists {
	border-right: 1px solid var(--color-gainsboro);
	width: 0;
	left: -100%;
	padding-left: .5em;
	position: relative;
	transition: left .2s ease-in-out, width .2s ease-in-out .2s;
}
.lists-active .lists {
	left: 0;
	width: 100%;
	transition: width .2s ease-in-out, left .2s ease-in-out .2s;
}
@media (min-width: 45em) {
	.lists {
		left: -30%;
	}
	.lists-active .lists {
		width: 30%;
	}
}
@media (min-width: 75em) {
	.lists {
		left: -20%;
	}
	.lists-active .lists {
		width: 20%;
	}
}

.list h3 {
	font-size: 1.2em;
	margin: .8rem 0 0 0;
	font-variant: small-caps;
	font-weight: 300;
	transition: margin .2s ease-in-out;
}
.list .loader.circle {
	width: 2em;
}
.list ul {
	padding-left: 0;
}
.list-item {
	border-bottom: 1px solid var(--color-gainsboro);
	cursor: pointer;
	list-style: none;
	position: relative; /* in order to position dirty round dot */
}
.list-item:last-of-type {
	border-bottom: none;
}
.list-item a {
	color: #333;
	display: block;
	padding: 1rem .5rem 1rem 1rem;
	text-decoration: none;
}
.list-item.dirty a {
	color: var(--color-jungle-green);
}
.list-item:hover {
	background-color: var(--color-white-smoke);
}
.list-item.selected {
	background-color: var(--color-mine-shaft);
}
.list-item.selected a {
	color: #fff;
}
.list-item.dirty::before {
	background-color: var(--color-jungle-green);
	border-radius: 50%; /* round dot */
	content: '';
	display: block;
	position: absolute;
	top: calc(50% - 2.5px);
	left: .4rem;
	width: 5px;
	height: 5px;
}

.editor-container {
	width: 100%;
	right: 0;
	height: 100%;
	margin: 0 auto;
	padding: .5rem .5rem 0;
	position: relative; /* to match absolutely positioned action buttons */
	transition: right .2s ease-in-out, width .2s ease-in-out .2s;
	overflow-y: hidden;
}
/* when list is active, hide editor-container for small viewport */
.lists-active .editor-container {
	width: 0;
	padding: 0;
	right: -100%;
	transition: width .2s ease-in-out, right .2s ease-in-out .2s;
}
@media (min-width: 45em) {
	.editor-container {
		padding: .5rem 2.8rem 0 .5rem;
	}
	.lists-active .editor-container {
		right: 0;
		width: 70%;
		padding: .5rem 2.8rem 0 .5rem;
	}
}
/* ... */

